--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
       },
       (error) => {
         console.warn("Error al escanear:", error);
+      },
+      // Especificamos los tipos de códigos que queremos leer
+      {
+        formatsToSupport: [
+          Html5QrcodeSupportedFormats.EAN_13,
+          Html5QrcodeSupportedFormats.EAN_8,
+          Html5QrcodeSupportedFormats.UPC_A,
+          Html5QrcodeSupportedFormats.UPC_E,
+          Html5QrcodeSupportedFormats.CODE_128,
+          Html5QrcodeSupportedFormats.CODE_39,
+          Html5QrcodeSupportedFormats.ITF
+        ]
       }
     );
 
