--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-  <h3>Escanear Códigos de Barras</h3>
+  <h3>Escanear Código de Barras</h3>
   
   <div id="reader"></div>
   
@@ -38,48 +38,33 @@
   <script>
     // Esta variable contendrá el código escaneado
     let codigoEscaneado = "";
-    
-    // Contador para los códigos escaneados
-    let contadorEscaneados = 0;
 
     // Iniciar el escáner de código de barras
     const html5QrCode = new Html5Qrcode("reader");
-
-    // Configuración del lector para leer varios tipos de códigos de barras
-    const configurarEscaner = () => {
-      html5QrCode.start(
-        { facingMode: "environment" },  // Usamos la cámara trasera
-        { fps: 10 },                    // Frecuencia de escaneo
-        (decodedText) => {
-          // Este callback se ejecuta cuando se escanea un código
-          if (codigoEscaneado !== decodedText) { // Evitar repetir el mismo código
-            codigoEscaneado = decodedText;
-            document.getElementById("codigo").textContent = decodedText;
-
-            // Mostrar mensaje y guardar
-            contadorEscaneados++;
-            console.log(`Código escaneado ${contadorEscaneados}: ${decodedText}`);
-          }
-        },
-        (error) => {
-          console.warn("Error al escanear:", error);
-        },
-        {
-          formatsToSupport: [
-            Html5QrcodeSupportedFormats.EAN_13,
-            Html5QrcodeSupportedFormats.EAN_8,
-            Html5QrcodeSupportedFormats.UPC_A,
-            Html5QrcodeSupportedFormats.UPC_E,
-            Html5QrcodeSupportedFormats.CODE_128,
-            Html5QrcodeSupportedFormats.CODE_39,
-            Html5QrcodeSupportedFormats.ITF
-          ]
-        }
-      );
-    };
-
-    // Llamada inicial a la función para configurar el escáner
-    configurarEscaner();
+    html5QrCode.start(
+      { facingMode: "environment" },  // Usamos la cámara trasera
+      { fps: 10 },                    // Frecuencia de escaneo
+      (decodedText) => {
+        // Este callback se ejecuta cuando se escanea un código
+        codigoEscaneado = decodedText;
+        document.getElementById("codigo").textContent = decodedText;
+      },
+      (error) => {
+        console.warn("Error al escanear:", error);
+      },
+      // Especificamos los tipos de códigos que queremos leer
+      {
+        formatsToSupport: [
+          Html5QrcodeSupportedFormats.EAN_13,
+          Html5QrcodeSupportedFormats.EAN_8,
+          Html5QrcodeSupportedFormats.UPC_A,
+          Html5QrcodeSupportedFormats.UPC_E,
+          Html5QrcodeSupportedFormats.CODE_128,
+          Html5QrcodeSupportedFormats.CODE_39,
+          Html5QrcodeSupportedFormats.ITF
+        ]
+      }
+    );
 
     // Función para enviar los datos a un endpoint (reemplazar con el tuyo)
     function enviarDatos() {
